service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: techmart-vs
  namespace: techmart
spec:
  hosts:
    - techmart-service
  http:
    - route:
        - destination:
            host: techmart-service
            subset: v1
          weight: 90
        - destination:
            host: techmart-service
            subset: v2
          weight: 10
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: techmart-dr
  namespace: techmart
spec:
  host: techmart-service
  subsets:
    - name: v1
      labels:
        version: stable
    - name: v2
      labels:
        version: canary
